Locall playerList with chance add new player.

--- a/war/PlayersEngine.css
+++ b/war/PlayersEngine.css
@@ -15,6 +15,12 @@ h1 {
   font-size: 16pt;
 }
 
+.loginButton {
+	color: red;
+	display: block;
+	font-size: 16pt;
+}
+
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
   width: 400px;
