--- a/war/css/PlayersEngine.css
+++ b/war/css/PlayersEngine.css
@@ -56,6 +56,10 @@ body {
 	margin: 10px 0px 15px 0px;
 }
 
+.errorMessage {
+	color: red;
+}
+
 /** Example rules used by the template application (remove for your app) */
 h1 {
 	font-size: 2em;
